added logout method
