# src/api/routes/authRoutes.js
@@ -2,11 +2,17 @@
 const express = require('express');
 const router = express.Router();
 const authController = require('../controllers/authController');
+const { authenticate } = require('../middlewares/authMiddleware');
+
 
 // Route pour l'inscription
 router.post('/register', authController.register);
 
 // Route pour la connexion
 router.post('/login', authController.login);
+
+// Route pour la déconnexion
+router.post('/logout', authenticate, authController.logout);
+
 
 module.exports = router;
